--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+spring.datasource.url = jdbc:mysql://localhost:3306/vitoPizzaDb?useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+
+# hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+# hibernate ddl auto update create table if it is not exit
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.springframework.security=DEBUG
+
+app.jwt-secret= JWTVito321
+app.jwt-expiration-milliseconds = 20000000
+
+
