--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/vitoPizzaDb?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/vitoDb?useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
 
