--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/vitoDb?useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
-
+server.port=8081
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -10,9 +10,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # hibernate ddl auto update create table if it is not exit
 spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.springframework.security=DEBUG
 
-app.jwt-secret= JWTVito321
-app.jwt-expiration-milliseconds = 20000000
+
 
 
